# consultas-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
consultas/: models.py  serializers.py  tests_view.py  urls.py  views.py
consultas/migrations/: 0001_initial.py  0002_consulta_status_pagamento_consulta_valor_and_more.py
core/: settings.py  urls.py
